# home_work_31

./: pyproject.toml
ads/: admin.py
datasets/: convert.py
tests/ads/: ad_list_test.py
users/: models.py  serializers.py  validators.py
